--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,18 @@
     <title>Chat app</title>
   </head>
   <body>
-    <h1>Chat app is running</h1>
+
+    <h1>Chat app</h1>
+
+    <form id="message-form">
+      <input type="text" name="message" placeholder="Message">
+      <button type="submit" id="submit">Send</button>
+    </form>
+
+    <button type="button" id="send-location">Share location</button>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
+
   </body>
 </html>
