--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 
     <h1>Chat app</h1>
 
+    <!-- Message list template -->
+    <div id="messages"></div>
+
+    <!-- Form -->
     <form id="message-form">
       <input type="text" name="message" placeholder="Message">
       <button type="submit" id="submit">Send</button>
@@ -14,7 +18,28 @@
 
     <button type="button" id="send-location">Share location</button>
 
+    <!-- Tempates -->
+    <script id="message-template" type="text/html">
+      <div>
+        <p>{{ message }}</p>
+      </div>
+    </script>
+
+    <script id="location-template" type="text/html">
+      <div>
+        <p><a href="{{ url }}" target="_blank">Show my location</a></p>
+      </div>
+    </script>
+
+    <!-- Front-end libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+
+    <!-- Socket.io scripts -->
     <script src="/socket.io/socket.io.js"></script>
+
+    <!-- App scripts -->
     <script src="/js/chat.js"></script>
 
   </body>
