--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <!-- Tempates -->
     <script id="message-template" type="text/html">
       <div>
-        <p>{{ message }}</p>
+        <p>{{ createdAt }} - {{ message }}</p>
       </div>
     </script>
 
