Added CSS and img assets

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <script id="location-template" type="text/html">
       <div>
-        <p><a href="{{ url }}" target="_blank">Show my location</a></p>
+        <p>{{ createdAt }} - <a href="{{ url }}" target="_blank">Show my location</a></p>
       </div>
     </script>
 
