--- a/public/index.html
+++ b/public/index.html
@@ -1,46 +1,33 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <title>Chat app</title>
+    <title>Chat App - Join Page</title>
+    <link rel="shortcut icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
+
   <body>
 
-    <h1>Chat app</h1>
+    <div class="centered-form">
+      <div class="centered-form__box">
 
-    <!-- Message list template -->
-    <div id="messages"></div>
+        <h1>Join the chat</h1>
 
-    <!-- Form -->
-    <form id="message-form">
-      <input type="text" name="message" placeholder="Message">
-      <button type="submit" id="submit">Send</button>
-    </form>
+        <form class="" action="/chat.html">
 
-    <button type="button" id="send-location">Share location</button>
+          <label for="username">Display name</label>
+          <input type="text" name="username" placeholder="Ex: Luke Skywalker" required>
 
-    <!-- Tempates -->
-    <script id="message-template" type="text/html">
-      <div>
-        <p>{{ createdAt }} - {{ message }}</p>
+          <label for="">Room name</label>
+          <input type="text" name="room" placeholder="Ex: Death Star">
+
+          <button type="submit">Join!</button>
+
+        </form>
+
       </div>
-    </script>
-
-    <script id="location-template" type="text/html">
-      <div>
-        <p>{{ createdAt }} - <a href="{{ url }}" target="_blank">Show my location</a></p>
-      </div>
-    </script>
-
-    <!-- Front-end libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-
-    <!-- Socket.io scripts -->
-    <script src="/socket.io/socket.io.js"></script>
-
-    <!-- App scripts -->
-    <script src="/js/chat.js"></script>
+    </div>
 
   </body>
 </html>
