--- a/public/chat.html
+++ b/public/chat.html
@@ -47,7 +47,7 @@
       </div>
     </script>
 
-    <!-- Front-end libraries -->
+    <!-- Front-end libraries - Mustache, momentjs and querystring -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
