--- a/public/chat.html
+++ b/public/chat.html
@@ -10,14 +10,16 @@
   <body>
     <div class="chat">
 
-      <div class="chat__sidebar"></div>
+      <div id="sidebar" class="chat__sidebar">
+
+      </div>
 
       <div class="chat__main">
         <div id="messages" class="chat__messages"></div>
 
         <div class="compose">
           <form id="message-form">
-            <input type="text" name="message" placeholder="Message">
+            <input type="text" name="message" placeholder="Message" required autocomplete="off">
             <button type="submit" id="submit">Send</button>
           </form>
           <button type="button" id="send-location">Share location</button>
@@ -30,7 +32,7 @@
     <script id="message-template" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">Username</span>
+          <span class="message__name">{{ username }}</span>
           <span class="message__meta">{{ createdAt }}</span>
         </p>
         <p>{{ message }}</p>
@@ -40,11 +42,21 @@
     <script id="location-template" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">Username</span>
+          <span class="message__name">{{ username }}</span>
           <span class="message__meta">{{ createdAt }}</span>
         </p>
-        <p><a href="{{ url }}" target="_blank">Show my location</a></p>
+        <p><a href="{{ url }}" target="_blank">This is my location</a></p>
       </div>
+    </script>
+
+    <script id="sidebar-template" type="text/html">
+      <h2 class="room-title">{{ room }}</h2>
+      <h3 class="list-title">Users</h3>
+      <ul class="users">
+        {{ #users }}
+          <li>{{ username }}</li>
+        {{ /users }}
+      </ul>
     </script>
 
     <!-- Front-end libraries - Mustache, momentjs and querystring -->
