--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Chat App - Join Page</title>
     <link rel="shortcut icon" href="/img/favicon.ico">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.min.css">
   </head>
 
   <body>
